--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.20",
+    "ably": "^2.10.1",
+    "clsx": "^2.1.1",
+    "geist": "^1.4.2",
+    "konva": "^9.3.22",
+    "lodash": "^4.17.21",
+    "next": "15.4.5",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "react-konva": "^19.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
