--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/lodash": "^4.17.20",
     "ably": "^2.10.1",
+    "canvas": "^3.1.2",
     "clsx": "^2.1.1",
     "geist": "^1.4.2",
     "konva": "^9.3.22",
