--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "geist": "^1.4.2",
     "konva": "^9.3.22",
     "lodash": "^4.17.21",
+    "nanoid": "^5.1.5",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
